# compare_cli_frameworks

./: README.md  pyproject.toml
compare_cli_frameworks/: argparse_cli.py  click_cli.py  fire_cli.py  invoke_cli.py  typer_cli.py  utils.py
